--- a/references.bib
+++ b/references.bib
@@ -17,6 +17,52 @@
   year={2004},
   publisher={The University of Chicago Press}
 }
+
+@book{trudgill1983on,
+author={Trudgill, Peter},
+year=1983,
+title={On dialect: Social and geographical perspectives},
+address={Oxford},
+publisher={Blackwell}
+}
+
+@misc{caballero2009data,
+  author={Caballero, Gabriela},
+  year={2009},
+  title={Choguita Rarámuri description and documentation},
+  address={London},
+  publisher={SOAS, Endangered Languages Archive},
+  note={http://elar.soas.ac.uk/deposit/0056. Last accessed on April 26, 2018.}
+}
+
+@article{caballero2017choguita,
+  title={Choguita Rar{\'a}muri (Tarahumara) language description and documentation: a guide to the deposited collection and associated materials},
+  author={Caballero, Gabriela},
+  year={2017},
+  publisher={University of Hawaii Press},
+  volume={11},
+  pages={224–255},
+  journal={Language Documentation and Conservation}
+}
+
+@article{labov2012journal,
+  title={Journal of Linguistic Geography},
+  author={Labov, William and Preston, Dennis and Britain, David and others},
+  journal={Journal of Linguistic Geography},
+  volume={1},
+  number={1},
+  year={2012}
+}
+
+
+@book{labov2005atlas,
+  title={The atlas of North American English: Phonetics, phonology and sound change},
+  author={Labov, William and Ash, Sharon and Boberg, Charles},
+  year={2005},
+  publisher={Walter de Gruyter}
+}
+
+
 @article{cenerini2017mapping,
   title={Mapping Dialectal Variation Using the Algonquian Linguistic Atlas},
   author={Cenerini, Chantale and Junker, Marie-Odile and Rosen, Nicole},
